Fixed spacing issues

--- a/scss/components/header/_header.scss
+++ b/scss/components/header/_header.scss
@@ -74,6 +74,7 @@
 
   @include breakpoint(768px) {
     float: right;
+    margin-right: 10%;
   }
 }
 
