--- a/scss/components/search/_search.scss
+++ b/scss/components/search/_search.scss
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 15%;
 
   @include breakpoint(768px) {
     display: block;
@@ -33,6 +34,7 @@
 .search__close,
 %search__close {
   cursor: pointer;
+  float: right;
 }
 
 .search__button,
@@ -55,7 +57,6 @@
 .search,
 %search {
   position: relative;
-  width: 300px;
   display: flex;
   align-items: center;
 }
@@ -63,27 +64,9 @@
 .search__input,
 %search__input {
   height: 27px;
-  width: 15%;
   border-radius: 2px;
   border: 1px solid black;
   font-size: 13px;
   padding: .5rem;
-}
-
-.search__submit,
-%search__submit {
-  position: absolute;
-  top: 6px;
-  right: 52px;
-  border: 0;
-  padding: .85rem;
-  height: 1rem;
-  cursor: pointer;
-
-  background: {
-    color: transparent;
-    image: url("/img/search-button.svg");
-    repeat: no-repeat;
-    position: center;
-  }
+  width: auto;
 }
